--- a/Stock-ms.properties
+++ b/Stock-ms.properties
@@ -1,6 +1,6 @@
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/msstock?createDatabaseIfNotExist=true
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
